--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-test
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Group 1 : Index Page</title>
+    <link rel="stylesheet" href="styling.css">
+  </head>
+  <body>
+    <header>
+
+      <!-- includes title and logo on the top left -->
+      <div class="header_flex_top">
+
+        <div class="header_img_and_spacing">
+          <img class="top_left_img" src="" alt="insert logo img here">
+        </div>
+
+        <div class="header_text">
+          <h1 class="title">Company Name</h1>
+          <h1 class="title">Slogan</h1>
+        </div>
+
+        <div class="header_img_and_spacing">
+
+        </div> <!-- / .tl_img_and_spacing -->
+
+      </div> <!-- / .header_flex_top -->
+
+      <!-- navigation bar under the title -->
+      <div id="navigation_bar">
+        <p>
+          <a href="index.html">Home</a> ·
+          <a href="index.html">Team</a> ·
+          <a href="index.html">Data</a> ·
+          <a href="index.html">Work</a> ·
+          <a href="index.html">Tech</a> ·
+          <a href="index.html">Project</a> ·
+          <a href="index.html">Agenda</a>
+        </p>
+      </div> <!-- / .navigation_bar -->
+
+    </header>
+    <main>
+
+      <!-- massive image on homepage here -->
+      <div id="homepage_image">
+        <img src="" alt="insert homepage img here">
+      </div>
+
+      <!-- Our story section -->
+      <div id="story">
+        <h3>Our Story</h3>
+      </div>
+
+      <!-- includes all the redirects to content -->
+      <div class="main_div">
+
+        <div class="main_flex_top">
+
+          <div class="main_content">
+            <h3><a href="index.html">Our profile</a></h3>
+          </div>
+          <div class="main_content">
+            <h3><a href="index.html">Industry Data</a></h3>
+          </div>
+          <div class="main_content">
+            <h3><a href="index.html">IT Work</a></h3>
+          </div>
+
+        </div> <!-- / .main_flex_top -->
+
+        <div class="main_flex_bottom">
+          <div class="main_content">
+            <h3><a href="index.html">IT Technologies</a></h3>
+          </div>
+          <div class="main_content">
+            <h3><a href="index.html">Project</a></h3>
+          </div>
+          <div class="main_content">
+            <h3><a href="index.html">Agenda</a></h3>
+          </div>
+
+        </div> <!-- / .main_flex_bottom -->
+
+      </div> <!-- / .main_div -->
+    </main>
+    <footer>
+
+      <div class="footer_div">
+
+        <!-- text on top of app icons -->
+        <div class="footer_top">
+          <p>Socials</p>
+        </div>
+
+        <!-- contains png's of app icons -->
+        <div class="footer_socials_flex">
+
+          <div class="footer_socials">
+            <img src="" alt="instagram.png">
+          </div>
+
+          <div class="footer_socials">
+            <img src="" alt="linkedin.png">
+          </div>
+
+          <div class="footer_socials">
+            <img src="" alt="twitter.png">
+          </div>
+
+          <div class="footer_socials">
+            <img src="" alt="facebook.png">
+          </div>
+
+        </div> <!-- / .footer_socials_flex -->
+
+      </div> <!-- / .footer_div -->
+
+    </footer>
+  </body>
+</html>
