--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <!-- massive image on homepage here -->
       <div id="homepage_image">
-        <img src="kaleid_images/nightsky.jpg" alt="insert homepage img here">
+        <img src="kaleid_images/night_sky.jpg" alt="insert homepage img here">
       </div>
 
       <!-- Our story section -->
