--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div> <!-- / .navigation_bar -->
 
     </header>
-    <main>
+    <main style="margin: 100px;>
 
       <!-- massive image on homepage here -->
       <div id="homepage_image">
