--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
 
         <div class="header_text">
-          <h1 class="title">Company Name</h1>
-          <h1 class="title">Slogan</h1>
+          <h1 class="title">KALEID AI</h1>
+          <h2 class="title">Collecting and Connecting Data</h2>
         </div>
 
         <div class="header_img_and_spacing">
