--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="header_flex_top">
 
         <div class="header_img_and_spacing">
-          <img class="top_left_img" src="kaleid_images/new_logo.png" alt="insert logo img here">
+          <img src="kaleid_images/new_logo.png" class="top_left_img"  alt="insert logo img here">
         </div>
 
         <div class="header_text">
