--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       </div> <!-- / .navigation_bar -->
 
     </header>
-    <main style="margin: 100px;>
+    <main style="margin-left: 100px;
+                 margin-right: 100px;">
 
       <!-- massive image on homepage here -->
       <div id="homepage_image">
