--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
     </header>
     <main style="margin-left: 100px;
-                 margin-right: 100px;">
+                 margin-right: 100px;
+                 margin-bottom: 100px;">
 
       <!-- massive image on homepage here -->
       <div id="homepage_image">
