--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="header_text">
-          <h1 class="title">KALEID AI</h1>
+          <h1 class="title">KALEID A.I.</h1>
           <h2 class="title">Collecting and Connecting Data</h2>
         </div>
 
