--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <!-- massive image on homepage here -->
       <div id="homepage_image">
-        <img src="kaleid_images/night_sky.jpg" alt="image of constellations" width="1250px" height="auto">
+        <img src="kaleid_images/nightsky.jpg" alt="image of constellations" width="1250px" height="auto">
       </div>
 
       <!-- Our story section -->
