--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
         </div> <!-- / .main_flex_top -->
 
-        <div class="main_flex_bottom">
+        <div class="main_flex_bottom"
+             flex-shrink="2">
           <div class="main_content">
             <h3><a href="index.html">IT Technologies</a></h3>
           </div>
