--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="utf-8">
     <title>Group 1 : Index Page</title>
     <link rel="stylesheet" href="styling.css">
+    <style>
+.container {
+  position: relative;
+  font-family: Arial;
+}
+
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+</style>
   </head>
   <body>
     <header>
@@ -45,14 +61,17 @@
                  margin-bottom: 100px;">
 
       <!-- massive image on homepage here -->
+     <div class="container">                                
       <div id="homepage_image">
+        
         <img src="kaleid_images/nightsky.jpg" alt="image of constellations" width="1250px" height="auto">
         <div class="text-block">
         <h4>Our Story</h4>
         <p>At Kaleid AI it is our endeavour to gather and structure unorganised data for supervised and unsupervised Machine Learning (ML) information systems, and to connect unidentifiable patterns that are accessible to everyone. We believe that data is the new oil and we plan to refine information sharing with accurate analysis and rich datasets.</p?
         </div>
        </div>
-
+     </div>
+                               
       <!-- Our story section -->
       <div id="story">
         <h3>Our Story</h3>
