--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       .text-block {
         position: absolute;
-        bottom: 20px;
+        top: 80px;
         right: 20px;
         background-color: black;
         color: white;
