--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         position: absolute;
         top: 80px;
         right: 20px;
-        background-color: black;
+        background-color: rgb(0,0,255);opacity:0.4;
         color: white;
         padding-left: 20px;
         padding-right: 20px;
