--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       .text-block {
         position: absolute;
         top: 80px;
-        right: 20px;
-        background-color: rgb(0,0,255);opacity:0.4;
+        right: 30px;
+        background-color: transparent;
         color: white;
         padding-left: 20px;
         padding-right: 20px;
