--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       .text-block {
         position: absolute;
         top: 80px;
-        right: 30px;
+        left: 50px;
+        right: 50px;
         background-color: transparent;
         color: white;
         padding-left: 20px;
@@ -71,12 +72,6 @@
         </div>
        </div>
      </div>
-                               
-      <!-- Our story section -->
-      <div id="story">
-        <h3>Our Story</h3>
-        <p>At Kaleid AI it is our endeavour to gather and structure unorganised data for supervised and unsupervised Machine Learning (ML) information systems, and to connect unidentifiable patterns that are accessible to everyone. We believe that data is the new oil and we plan to refine information sharing with accurate analysis and rich datasets. </p>
-      </div>
 
       <!-- includes all the redirects to content -->
       <div class="main_div">
