--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
         </div>
        </div>
      </div>
+                               
+    <!-- Our story section -->
+      <div id="story">
+        <h3></h3>
+      </div>                           
 
       <!-- includes all the redirects to content -->
       <div class="main_div">
