--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
         <div class="footer_socials_flex">
 
           <div class="footer_socials">
-            <img src="" alt="instagram.png">
+            <img src="kaleid_images/socials/instagram.png" alt="instagram.png">
           </div>
 
           <div class="footer_socials">
-            <img src="" alt="linkedin.png">
+            <img src="kaleid_images/socials/linkedin.png" alt="linkedin.png">
           </div>
 
           <div class="footer_socials">
-            <img src="" alt="twitter.png">
+            <img src="kaleid_images/socials/twitter.png" alt="twitter.png">
           </div>
 
           <div class="footer_socials">
-            <img src="" alt="facebook.png">
+            <img src="kaleid_images/socials/facebook.png" alt="facebook.png">
           </div>
 
         </div> <!-- / .footer_socials_flex -->
