--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="header_flex_top">
 
         <div class="header_img_and_spacing">
-          <img src="kaleid_images/new_logo.png" class="top_left_img" width="100px" height="auto alt="insert logo img here">
+          <img src="kaleid_images/new_logo.png" class="top_left_img" width="100px" height="auto" alt="insert logo img here">
         </div>
 
         <div class="header_text">
@@ -123,19 +123,19 @@
         <div class="footer_socials_flex">
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/instagram.png" alt="instagram.png">
+            <img src="kaleid_images/socials/instagram.png" alt="instagram.png" width="20px" height="auto">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/linkedin.png" alt="linkedin.png">
+            <img src="kaleid_images/socials/linkedin.png" alt="linkedin.png" width="20px" height="auto">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/twitter.png" alt="twitter.png">
+            <img src="kaleid_images/socials/twitter.png" alt="twitter.png" width="20px" height="auto">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/facebook.png" alt="facebook.png">
+            <img src="kaleid_images/socials/facebook.png" alt="facebook.png" width="20px" height="auto">
           </div>
 
         </div> <!-- / .footer_socials_flex -->
