--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/twitter.png" alt="twitter.png" width="20px" height="auto">
+            <img src="kaleid_images/socials/twitter.png" alt="twitter.jpeg" width="20px" height="auto">
           </div>
 
           <div class="footer_socials">
