--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
         <div class="footer_socials_flex">
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/instagram.png" alt="instagram.png" width="10px" height="auto">
+            <img src="kaleid_images/socials/instagram.png" alt="instagram.png" width="10%" height="auto">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/linkedin.png" alt="linkedin.png" width="10px" height="auto">
+            <img src="kaleid_images/socials/linkedin.png" alt="linkedin.png" width="10%" height="auto">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/twitter.jpeg" alt="twitter.jpeg" width="10px" height="auto">
+            <img src="kaleid_images/socials/twitter.jpeg" alt="twitter.jpeg" width="10%" height="auto">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/facebook.png" alt="facebook.png" width="10px" height="auto">
+            <img src="kaleid_images/socials/facebook.png" alt="facebook.png" width="10%" height="auto">
           </div>
 
         </div> <!-- / .footer_socials_flex -->
