--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         </div>
 
         <!-- contains png's of app icons -->
-        <div class="footer_socials_flex">
+        <div class="footer_socials_flex"
+             style="width="10%" height="auto">
 
           <div class="footer_socials">
             <img src="kaleid_images/socials/instagram.png" alt="instagram.png" width="10%" height="auto">
