--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@
         </div>
        </div>
      </div>
-                               
-    <!-- Our story section -->
-      <div id="story">
-        <h3></h3>
-      </div>                           
+                                                      
 
       <!-- includes all the redirects to content -->
       <div class="main_div">
@@ -120,8 +116,7 @@
         </div>
 
         <!-- contains png's of app icons -->
-        <div class="footer_socials_flex"
-             style="width="10%" height="auto">
+        <div class="footer_socials_flex">
 
           <div class="footer_socials">
             <img src="kaleid_images/socials/instagram.png" alt="instagram.png" width="10%" height="auto">
