--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                                                       
 
       <!-- includes all the redirects to content -->
-      <div class="main_div">
+      <div class="main_div"
+           style="position:absolute; down:200px">
 
         <div class="main_flex_top">
 
