--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <!-- includes all the redirects to content -->
       <div class="main_div"
-           style="position:absolute; down:200px">
+           style="position:absolute; down:200px;">
 
         <div class="main_flex_top">
 
