--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         padding-left: 20px;
         padding-right: 20px;
       }
+      .main-div {
+        style="position:absolute; down:200px;
+      }
 </style>
   </head>
   <body>
@@ -75,8 +78,7 @@
                                                       
 
       <!-- includes all the redirects to content -->
-      <div class="main_div"
-           style="position:absolute; down:200px;">
+      <div class="main_div">
 
         <div class="main_flex_top">
 
