--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         padding-left: 20px;
         padding-right: 20px;
       }
-      .main-div {
+      
+      .main_div {
         style="position:absolute; down:200px;
       }
+      
 </style>
   </head>
   <body>
