--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       }
       
       .main_div {
-        style="position:absolute; down:200px;
+        position: absolute; 
+        down: 200px;
       }
       
 </style>
