--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         padding-right: 20px;
       }
       
-      .main_div {
+      .main_flex_top {
         position: absolute; 
-        down: 200px;
+        down: 500px;
       }
       
 </style>
