--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       .main_flex_top {
         position: absolute; 
-        down: 500px;
+        bottom: 500px;
       }
       
 </style>
