--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         padding-right: 20px;
       }
       
-      .main_flex_top {
+      .main_div {
         position: absolute; 
         bottom: 500px;
       }
