--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       }
       
       .main_div {
-        position: absolute; 
+        position: relative; 
         bottom: 500px;
       }
       
