--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       .main_div {
         position: relative; 
-        bottom: 1000px;
+        topm: 1000px;
       }
       
 </style>
