--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="footer_div">
 
         <!-- text on top of app icons -->
-        <div class="footer">
+        <div class="footer_top">
           <p>Socials</p>
         </div>
 
