--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         top: 100px;
       }
       
+      .main_flex_top {
+        flex-shrink: 1;
+      }
+      
 </style>
   </head>
   <body>
