--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
         <div class="footer_socials_flex">
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/instagram.png" alt="instagram.png" width="10%" height="auto">
+            <img src="kaleid_images/socials/instagram.png" alt="instagram.png">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/linkedin.png" alt="linkedin.png" width="10%" height="auto">
+            <img src="kaleid_images/socials/linkedin.png" alt="linkedin.png">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/twitter.jpeg" alt="twitter.jpeg" width="10%" height="auto">
+            <img src="kaleid_images/socials/twitter.jpeg" alt="twitter.jpeg">
           </div>
 
           <div class="footer_socials">
-            <img src="kaleid_images/socials/facebook.png" alt="facebook.png" width="10%" height="auto">
+            <img src="kaleid_images/socials/facebook.png" alt="facebook.png">
           </div>
 
         </div> <!-- / .footer_socials_flex -->
