--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Group 1 : Index Page</title>
-    <link rel="stylesheet" href="styling.css">
+    <link rel="styleshee" href="styling.css">
     <style>
       .container {
         position: relative;
