--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <div id="navigation_bar">
         <p>
           <a href="index.html">Home</a> ·
-          <a href="index.html">Team</a> ·
-          <a href="index.html">Data</a> ·
-          <a href="index.html">Work</a> ·
-          <a href="index.html">Tech</a> ·
-          <a href="index.html">Project</a> ·
-          <a href="index.html">Agenda</a>
+          <a href="team.html">Team</a> ·
+          <a href="data.html">Data</a> ·
+          <a href="work.html">Work</a> ·
+          <a href="tech.html">Tech</a> ·
+          <a href="projecct.html">Project</a> ·
+          <a href="agenda.html">Agenda</a>
         </p>
       </div> <!-- / .navigation_bar -->
 
@@ -86,26 +86,26 @@
         <div class="main_flex_top">
 
           <div class="main_content">
-            <h3><a href="index.html">Our profile</a></h3>
+            <h3><a href="team.html">Our profile</a></h3>
           </div>
           <div class="main_content">
-            <h3><a href="index.html">Industry Data</a></h3>
+            <h3><a href="data.html">Industry Data</a></h3>
           </div>
           <div class="main_content">
-            <h3><a href="index.html">IT Work</a></h3>
+            <h3><a href="work.html">IT Work</a></h3>
           </div>
 
         </div> <!-- / .main_flex_top -->
 
         <div class ="main_flex_bottom">
           <div class="main_content">
-            <h3><a href="index.html">IT Technologies</a></h3>
+            <h3><a href="tech.html">IT Technologies</a></h3>
           </div>
           <div class="main_content">
-            <h3><a href="index.html">Project</a></h3>
+            <h3><a href="project.html">Project</a></h3>
           </div>
           <div class="main_content">
-            <h3><a href="index.html">Agenda</a></h3>
+            <h3><a href="agenda.html">Agenda</a></h3>
           </div>
 
         </div> <!-- / .main_flex_bottom -->
