--- a/tech.html
+++ b/tech.html
@@ -127,6 +127,34 @@
           <p>text</p>
           <p>text</p>
           <p>text</p>
+        </div> 
+        <hr>
+        <div class="technologies_content">
+          <h3><u>IT Technologies References</u></h3>
+          <h4><b>Machine Learning</b></h4>
+          <ol>
+            <li>reference1</li>
+            <li>reference2</li>
+            <li>reference3</li>
+          </ol>
+          <h4><b>Natural Language Processing</b></h4>
+          <ol>
+            <li>reference1</li>
+            <li>reference2</li>
+            <li>reference3</li>
+          </ol>
+          <h4><b>Cyber Security</b></h4>
+          <ol>
+            <li>reference1</li>
+            <li>reference2</li>
+            <li>reference3</li>
+          </ol>
+          <h4><b>Cloud Services</b></h4>
+          <ol>
+            <li>reference1</li>
+            <li>reference2</li>
+            <li>reference3</li>
+          </ol>
         </div> <!-- / .technologies_content -->
 
       </div> <!-- / .technologies -->
