--- a/team.html
+++ b/team.html
@@ -54,13 +54,13 @@
         <h3><u>Team Profile & Ideal Jobs</u></h3>
         <br>
         <div class="sub_header">
-          <h3><b>Name</b></h3>
+          <h3><b>Name</b>Mark Schroeder</h3>
         </div>
         <div class="profile_middle_flex">
           <div class="profile_personal_main">
 
             <div class="profile_personal_content">
-              <img src="" alt="name_img.png">
+              <img src="kaleid_images_team_profile_ideal_jobs/team/mark.png" alt="name_img.png">
             </div>
             <div class="profile_personal_content">
               <p>Personal Information</p>
