--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
         <h3><u>Team Profile & Ideal Jobs</u></h3>
         <br>
         <div class="sub_header">
-          <h3><b>Name</b>Mark Schroeder</h3>
+          <h3><b>Mark Schroeder</b></h3>
         </div>
         <div class="profile_middle_flex">
           <div class="profile_personal_main">
