--- a/team.html
+++ b/team.html
@@ -64,6 +64,10 @@
             </div>
             <div class="profile_personal_content">
               <p>Personal Information</p>
+              <p>s3895337</p>
+              <p>s3895337@student.rmit.edu.au</p>
+              <p>Education:</p>
+              <p>Hobbies:</p>
             </div>
 
           </div>
