--- a/team.html
+++ b/team.html
@@ -66,8 +66,168 @@
               <p>Personal Information</p>
               <p>s3895337</p>
               <p>s3895337@student.rmit.edu.au</p>
-              <p>Education:</p>
-              <p>Hobbies:</p>
+              <p>Hobbies: Guitar, Cat.</p>
+              
+            </div>
+
+          </div>
+          <div class="profile_personal_right">
+            <h4><b>IT Interest</b></h4>
+            <p>text</p>
+            <h4><b>IT Experience</b></h4>
+            <p>text</p>
+            <h4><b>Ideal Job</b></h4>
+            <p>text</p>
+          </div>
+        </div> <!-- profile_middle_flex -->
+
+        <div class="profile_bottom_flex">
+
+          <div class="profile_bottom_content">
+            <img src="" alt="strengths.png">
+          </div>
+          <div class="profile_bottom_content">
+            <img src="" alt="weaknesses.png">
+          </div>
+
+        </div> <!-- / .profile_bottom_flex -->
+      </div> <!-- / .profile_main -->
+      <hr>
+      <div class="profile_main">
+        <div class="sub_header">
+          <h3><b>Jack Gale</b></h3>
+        </div>
+        <div class="profile_middle_flex">
+          <div class="profile_personal_main">
+
+            <div class="profile_personal_content">
+              <img src="kaleid_images/team_profile_ideal_jobs/team/jack.jpg" alt="name_img.png">
+            </div>
+            <div class="profile_personal_content">
+              <p>Personal Information</p>
+              <p>s3286616</p>
+              <p>23286616@student.rmit.edu.au</p>
+              <p>Hobbies: Piano, Psychology.
+            </div>
+
+          </div>
+          <div class="profile_personal_right">
+            <h4><b>IT Interest</b></h4>
+            <p>text</p>
+            <h4><b>IT Experience</b></h4>
+            <p>text</p>
+            <h4><b>Ideal Job</b></h4>
+            <p>text</p>
+          </div>
+        </div> <!-- profile_middle_flex -->
+
+        <div class="profile_bottom_flex">
+
+          <div class="profile_bottom_content">
+            <img src="" alt="strengths.png">
+          </div>
+          <div class="profile_bottom_content">
+            <img src="" alt="weaknesses.png">
+          </div>
+
+        </div> <!-- / .profile_bottom_flex -->
+      </div> <!-- / .profile_main -->
+      <hr>
+      <div class="profile_main">
+        <div class="sub_header">
+          <h3><b>Dominic Hutchinson</b></h3>
+        </div>
+        <div class="profile_middle_flex">
+          <div class="profile_personal_main">
+
+            <div class="profile_personal_content">
+              <img src="kaleid_images/team_profile_ideal_jobs/team/dom.png" alt="name_img.png">
+            </div>
+            <div class="profile_personal_content">
+              <p>Personal Information</p>
+               <p>s394438</p>
+               <p>s394438@student.rmit.edu.au</p>
+               <p>Hobbies: Writing, Gaming.</p>
+            </div>
+
+          </div>
+          <div class="profile_personal_right">
+            <h4><b>IT Interest</b></h4>
+            <p>text</p>
+            <h4><b>IT Experience</b></h4>
+            <p>text</p>
+            <h4><b>Ideal Job</b></h4>
+            <p>text</p>
+          </div>
+        </div> <!-- profile_middle_flex -->
+
+        <div class="profile_bottom_flex">
+
+          <div class="profile_bottom_content">
+            <img src="" alt="strengths.png">
+          </div>
+          <div class="profile_bottom_content">
+            <img src="" alt="weaknesses.png">
+          </div>
+
+        </div> <!-- / .profile_bottom_flex -->
+      </div> <!-- / .profile_main -->
+      <hr>
+      <div class="profile_main">
+        <div class="sub_header">
+          <h3><b>Yousef Fares</b></h3>
+        </div>
+        <div class="profile_middle_flex">
+          <div class="profile_personal_main">
+
+            <div class="profile_personal_content">
+              <img src="kaleid_images/team_profile_ideal_jobs/team/yousef.jpg" alt="name_img.png">
+            </div>
+            <div class="profile_personal_content">
+              <p>Personal Information</p>
+              <p>s3955987</p>
+              <p>s3955987@student.rmit.edu.au</p>
+              <p>Hobbies: Food, Movies.</p>
+            </div>
+
+          </div>
+          <div class="profile_personal_right">
+            <h4><b>IT Interest</b></h4>
+            <p>text</p>
+            <h4><b>IT Experience</b></h4>
+            <p>text</p>
+            <h4><b>Ideal Job</b></h4>
+            <p>text</p>
+          </div>
+        </div> <!-- profile_middle_flex -->
+
+        <div class="profile_bottom_flex">
+
+          <div class="profile_bottom_content">
+            <img src="" alt="strengths.png">
+          </div>
+          <div class="profile_bottom_content">
+            <img src="" alt="weaknesses.png">
+          </div>
+
+        </div> <!-- / .profile_bottom_flex -->
+      </div> <!-- / .profile_main -->
+      <hr>
+      <div class="profile_main">
+        <div class="sub_header">
+          <h3><b>Gabriel Jones</b></h3>
+        </div>
+        <div class="profile_middle_flex">
+          <div class="profile_personal_main">
+
+            <div class="profile_personal_content">
+              <img src="kaleid_images/team_profile_ideal_jobs/team/gabe.jpg" alt="name_img.png">
+            </div>
+            <div class="profile_personal_content">
+              <p>Personal Information</p>
+              <p>s3957629</p>
+              <p>s3957629@student.rmit.edu.au</p>
+              <p>Hobbies: Hardware, Graphics.</p>
             </div>
 
           </div>
@@ -101,158 +261,13 @@
           <div class="profile_personal_main">
 
             <div class="profile_personal_content">
-              <img src="" alt="name_img.png">
+              <img src="kaleid_images/team_profile_ideal_jobs/team/emre.jpg" alt="name_img.png">
             </div>
             <div class="profile_personal_content">
               <p>Personal Information</p>
-            </div>
-
-          </div>
-          <div class="profile_personal_right">
-            <h4><b>IT Interest</b></h4>
-            <p>text</p>
-            <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
-          </div>
-        </div> <!-- profile_middle_flex -->
-
-        <div class="profile_bottom_flex">
-
-          <div class="profile_bottom_content">
-            <img src="" alt="strengths.png">
-          </div>
-          <div class="profile_bottom_content">
-            <img src="" alt="weaknesses.png">
-          </div>
-
-        </div> <!-- / .profile_bottom_flex -->
-      </div> <!-- / .profile_main -->
-      <hr>
-      <div class="profile_main">
-        <div class="sub_header">
-          <h3><b>Name</b></h3>
-        </div>
-        <div class="profile_middle_flex">
-          <div class="profile_personal_main">
-
-            <div class="profile_personal_content">
-              <img src="" alt="name_img.png">
-            </div>
-            <div class="profile_personal_content">
-              <p>Personal Information</p>
-            </div>
-
-          </div>
-          <div class="profile_personal_right">
-            <h4><b>IT Interest</b></h4>
-            <p>text</p>
-            <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
-          </div>
-        </div> <!-- profile_middle_flex -->
-
-        <div class="profile_bottom_flex">
-
-          <div class="profile_bottom_content">
-            <img src="" alt="strengths.png">
-          </div>
-          <div class="profile_bottom_content">
-            <img src="" alt="weaknesses.png">
-          </div>
-
-        </div> <!-- / .profile_bottom_flex -->
-      </div> <!-- / .profile_main -->
-      <hr>
-      <div class="profile_main">
-        <div class="sub_header">
-          <h3><b>Name</b></h3>
-        </div>
-        <div class="profile_middle_flex">
-          <div class="profile_personal_main">
-
-            <div class="profile_personal_content">
-              <img src="" alt="name_img.png">
-            </div>
-            <div class="profile_personal_content">
-              <p>Personal Information</p>
-            </div>
-
-          </div>
-          <div class="profile_personal_right">
-            <h4><b>IT Interest</b></h4>
-            <p>text</p>
-            <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
-          </div>
-        </div> <!-- profile_middle_flex -->
-
-        <div class="profile_bottom_flex">
-
-          <div class="profile_bottom_content">
-            <img src="" alt="strengths.png">
-          </div>
-          <div class="profile_bottom_content">
-            <img src="" alt="weaknesses.png">
-          </div>
-
-        </div> <!-- / .profile_bottom_flex -->
-      </div> <!-- / .profile_main -->
-      <hr>
-      <div class="profile_main">
-        <div class="sub_header">
-          <h3><b>Name</b></h3>
-        </div>
-        <div class="profile_middle_flex">
-          <div class="profile_personal_main">
-
-            <div class="profile_personal_content">
-              <img src="" alt="name_img.png">
-            </div>
-            <div class="profile_personal_content">
-              <p>Personal Information</p>
-            </div>
-
-          </div>
-          <div class="profile_personal_right">
-            <h4><b>IT Interest</b></h4>
-            <p>text</p>
-            <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
-          </div>
-        </div> <!-- profile_middle_flex -->
-
-        <div class="profile_bottom_flex">
-
-          <div class="profile_bottom_content">
-            <img src="" alt="strengths.png">
-          </div>
-          <div class="profile_bottom_content">
-            <img src="" alt="weaknesses.png">
-          </div>
-
-        </div> <!-- / .profile_bottom_flex -->
-      </div> <!-- / .profile_main -->
-      <hr>
-      <div class="profile_main">
-        <div class="sub_header">
-          <h3><b>Name</b></h3>
-        </div>
-        <div class="profile_middle_flex">
-          <div class="profile_personal_main">
-
-            <div class="profile_personal_content">
-              <img src="" alt="name_img.png">
-            </div>
-            <div class="profile_personal_content">
-              <p>Personal Information</p>
+              <p>s3942994</p>
+              <p>s3942994@student.rmit.edu.au</p>
+              <p>Hobbies: Tradings Cards, Charity.</p>        
             </div>
 
           </div>
