--- a/team.html
+++ b/team.html
@@ -113,11 +113,11 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>text</p>
+            <p>Computer Programming, Computer Circuits, Arduino (C++),</p>
             <h4><b>IT Experience</b></h4>
-            <p>text</p>
+            <p>Marks leadership is a result of early his early IT experience building and programming circuits using Arduino. Mark is currently studying a Bachelor of Information Technology at RMIT and is equipped with certificates in Information Digital Media and Small Business. Marks current role as a STEM Technician exercises his curiosity every day by questioning existing technology and reinventing new processes for information and communications technology.</p>
             <h4><b>Ideal Job</b></h4>
-            <p>text</p>
+            <p>Armed with a strong passion for technology Mark possesses the desire to lead a team of developers and to manage many diverse business functions across technology. Mark has excellent delegation and management skills and is always the first to raise his hand. With strong ambition Mark wishes to explore the demanding nature of project management as he welcomes any challenge that he may face. </p>
           </div>
         </div> <!-- profile_middle_flex -->
 
