--- a/team.html
+++ b/team.html
@@ -73,11 +73,11 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>text</p>
+            <p>Computer Programming, Computer Circuits, Arduino (C++),</p>
             <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
+            <p>Marks leadership is a result of early his early IT experience building and programming circuits using Arduino. Mark is currently studying a Bachelor of Information Technology at RMIT and is equipped with certificates in Information Digital Media and Small Business. Marks current role as a STEM Technician exercises his curiosity every day by questioning existing technology and reinventing new processes for information and communications technology.</p>
+            <h4><b>Ideal Job: IT Manager</b></h4>
+            <p>Armed with a strong passion for technology Mark possesses the desire to lead a team of developers and to manage many diverse business functions across technology. Mark has excellent delegation and management skills and is always the first to raise his hand. With strong ambition Mark wishes to explore the demanding nature of project management as he welcomes any challenge that he may face. </p>
           </div>
         </div> <!-- profile_middle_flex -->
 
@@ -113,11 +113,11 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>Computer Programming, Computer Circuits, Arduino (C++),</p>
+            <p>Data Analysis, Machine Learning, Software Design & Implementation.</p>
             <h4><b>IT Experience</b></h4>
-            <p>Marks leadership is a result of early his early IT experience building and programming circuits using Arduino. Mark is currently studying a Bachelor of Information Technology at RMIT and is equipped with certificates in Information Digital Media and Small Business. Marks current role as a STEM Technician exercises his curiosity every day by questioning existing technology and reinventing new processes for information and communications technology.</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>Armed with a strong passion for technology Mark possesses the desire to lead a team of developers and to manage many diverse business functions across technology. Mark has excellent delegation and management skills and is always the first to raise his hand. With strong ambition Mark wishes to explore the demanding nature of project management as he welcomes any challenge that he may face. </p>
+            <p>As a Business Analyst Jack is exposed to many facets of technology and business. He is the bridge the connects technology to operations and it’s his responsibility to improve operations through technology solutions. He has achieved this by utilising Six Sigma DMAIC and Agile Software Development. As an agent of change Jack is involved in the end-to-end process of product control; this involves facilitating meetings with developers, showcasing requirements, building quality assurance test cases and training users on the front-line.  </p>
+            <h4><b>Ideal Job: Full-Stack Software Engineer</b></h4>
+            <p>This position appeals to Jack because it’s an opportunity to express his creativity through technology by building the architecture in the back-end and influencing the design at the front-end, this means that Software Engineers challenge their critical thinking and design skills every day. There are many similarities between computer programming and Jack’s favourite hobby, playing the piano, both demonstrate a structured learning approach.</p>
           </div>
         </div> <!-- profile_middle_flex -->
 
