--- a/team.html
+++ b/team.html
@@ -153,11 +153,11 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>text</p>
+            <p>Emotive Technology, Disability Support, Computer Programming, Story Telling</p>
             <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
+            <p>Dom continues to exploit rapid technology solutions by expressing creative thinking to disability support. This has allowed Dom to understand emotion on a deeper level and has encouraged unique streams of thought. Studying Computer Programming at a VCE level provides Dom with a competitive advantage over his peers as he transfers this knowledge to higher education. Dom believes that technology platforms create the perfect space for users to share their narrative and build a global consciousness.   </p>
+            <h4><b>Ideal Job: Full-Stack Software Engineer</b></h4>
+            <p>Responsible for creating, testing, and updating applications for clients, Dom is set to excel as a Software Engineer. Combining the aspects of creativity of front-end design and logic-based back-end architecture Dom will apply his innovative nature and critical thinking skills to solve technical problems. </p>
           </div>
         </div> <!-- profile_middle_flex -->
 
@@ -193,11 +193,11 @@
           </div>
           <div class="profile_personal_right">
             <h4><b>IT Interest</b></h4>
-            <p>text</p>
+            <p>Artificial Intelligence, Machine Learning, Video Game Development.</p>
             <h4><b>IT Experience</b></h4>
-            <p>text</p>
-            <h4><b>Ideal Job</b></h4>
-            <p>text</p>
+            <p>Yousef has been exposed to many diverse cultures from Australia and the Middle East, which has allowed him to absorb the curriculum from different perspectives around the world. Yousef is a global expert who is blessed with an analytical mind and is always thinking user experience. Comfortable with Python, HTML and CSS, Yousef’s tech portfolio continues to grow with one day hoping to be proficient in Machine Learning languages. </p>
+            <h4><b>Ideal Job: Machine Learning Engineer</b></h4>
+            <p>Yousef’s projection of understanding Computer Science technologies paves a direct path toward becoming a Machine Learning Engineer. Yousef acknowledges the difficulty of this career path but is already investigating computer mathematics and natural processing languages to achieve his goal. Back-end developers of this calibre are the backbone of any project, and Yousef is honest and committed enough to fulfill the responsibility.</p>
           </div>
         </div> <!-- profile_middle_flex -->
 
